<resources>
    <string name="app_name">Calculadora</string>
    <string name="txtTitulo">Calculator</string>
    <string name="btnUno">1</string>
    <string name="btnDos">2</string>
    <string name="btnTres">3</string>
    <string name="btnCuatro">4</string>
    <string name="btnCinco">5</string>
    <string name="btnSeis">6</string>
    <string name="btnSiete">7</string>
    <string name="btnOcho">8</string>
    <string name="btnNueve">9</string>
    <string name="btnCero">0</string>
    <string name="btnPunto">.</string>
    <string name="btnSumar">+</string>
    <string name="btnRestar">-</string>
    <string name="btnMultiplicar">*</string>
    <string name="btnDividir">/</string>
    <string name="btnResultado">=</string>
    <string name="btnLimpiar">CLEAR</string>
    <string name="txtResultado">Result</string>
</resources>